...
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonThrowCubes"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/cellName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/HorizontalGuideline"
...
        android:id="@+id/UnderTopPartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/YesButton"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:text="@string/yesAnswer"
        android:clickable="false"
        android:visibility="invisible"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/DialogView"
        app:layout_constraintStart_toStartOf="@+id/DialogView" />

    <Button
        android:id="@+id/NoButton"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:text="@string/noAnswer"
        android:clickable="false"
...
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />

    <Button
        android:id="@+id/buttonSuicide"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/suicide"
...
